generated/manifests/prod-axon/synapse/Service-synapse.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/name: synapse
    app.kubernetes.io/service: synapse
  name: synapse
  namespace: matrix
spec:
  ports:
    - name: http
      port: 8008
      protocol: TCP
      targetPort: 8008
  selector:
    app.kubernetes.io/controller: main
    app.kubernetes.io/instance: synapse
    app.kubernetes.io/name: synapse
  type: ClusterIP
