generated/manifests/prod-axon/synapse/HTTPRoute-synapse.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: synapse
  namespace: matrix
spec:
  hostnames:
    - matrix.json64.dev
  parentRefs:
    - name: default-gateway
      namespace: gateways
      sectionName: json64-dev-https
  rules:
    - backendRefs:
        - name: synapse
          port: 8008
      matches:
        - path:
            type: PathPrefix
            value: /_matrix
        - path:
            type: PathPrefix
            value: /_synapse/client
