generated/manifests/prod-axon/synapse/CiliumNetworkPolicy-allow-gateway-ingress-synapse.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gateway-ingress-synapse
  namespace: matrix
spec:
  description: Allow Envoy Gateway proxies to reach synapse.
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: synapse
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gateways
      toPorts:
        - ports:
            - port: "8008"
              protocol: TCP
