generated/manifests/prod-axon/synapse/CiliumNetworkPolicy-allow-internet-egress-synapse.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-internet-egress-synapse
  namespace: matrix
spec:
  description: Allow synapse to reach kanidm and federation peers.
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8448"
              protocol: TCP
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: synapse
